--- a/css/style.css
+++ b/css/style.css
@@ -600,9 +600,10 @@ header.sticky .nav-bar {
 }
 
 .edu-list .item:hover,
-.bar:hover,
-.experience-card:hover {
-    transform: scale(1.3);
+.bar:hover {
+    position: relative;
+    z-index: 99999;
+    transform: scale(1.2);
     cursor: pointer;
 }
 
@@ -651,13 +652,21 @@ header.sticky .nav-bar {
     transition: .3s ease;
 }
 
-.service-card .learn-more-btn i {
+.service-card .learn-more-btn i,
+.portfolio-model-body .learn-more-bt i {
     transition: .3s ease;
 }
 
-.service-card:hover .learn-more-btn i {
+.service-card:hover .learn-more-btn i,
+.portfolio-model-body .learn-more-bt:hover i {
     transform: translateX(10px);
 }
+
+.portfolio-model-body .learn-more-bt a {
+    color: var(--first-color);
+}
+
+
 
 .service-modal {
     z-index: 9999;
@@ -670,6 +679,7 @@ header.sticky .nav-bar {
     backdrop-filter: blur(10px);
     visibility: hidden;
     opacity: 0;
+    text-align: justify;
     transition: .3s ease;
 }
 
@@ -782,8 +792,9 @@ header.sticky .nav-bar {
 }
 
 .portfolio-list .img-card img {
-    width: 100%;
-    height: 100%;
+    padding: 20px;
+    width: 90%;
+    /* height: 100%; */
     object-fit: cover;
 }
 
@@ -837,6 +848,7 @@ header.sticky .nav-bar {
 .portfolio-model-body img {
     width: 100%;
     margin: 20px 0;
+    border: 2px solid #102048;
     border-radius: 10px;
 }
 
