--- a/css/style.css
+++ b/css/style.css
@@ -707,7 +707,7 @@ header.sticky .nav-bar {
 .service-modal-body .modal-close-btn {
     position: absolute;
     top: 0;
-    right: 0;
+    left: 0;
     margin: 20px;
     cursor: pointer;
 }
@@ -720,6 +720,11 @@ header.sticky .nav-bar {
     font-size: 1.3em;
     font-weight: 600;
     margin: 15px 0 10px;
+    letter-spacing: -1px;
+}
+
+.service-modal-body p {
+    letter-spacing: -1;
 }
 
 .service-modal-body ul li {
@@ -836,7 +841,7 @@ header.sticky .nav-bar {
 .portfolio-close-btn {
     position: absolute;
     top: 0;
-    right: 0;
+    left: 0;
     margin: 20px;
     cursor: pointer;
 }
